--- a/.github/workflows/jslinter.yml
+++ b/.github/workflows/jslinter.yml
@@ -6,12 +6,8 @@ on:
       - main
   pull_request:
 jobs:
-  build:
+  eslint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install modules
-      run: yarn
-    - name: Run ESLint
-      run: eslint . --ext .js,.jsx,.ts,.tsx
-      
+      - uses: actions/checkout@v1
+      - uses: stefanoeb/eslint-action@1.0.2
