--- a/.github/workflows/jslinter.yml
+++ b/.github/workflows/jslinter.yml
@@ -11,3 +11,5 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - uses: stefanoeb/eslint-action@1.0.2
+        with:
+          working-directory: src
