--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node frontend/index.js"
+        "start": "node frontend/index.js",
+        "check": "eslint ."
     },
     "author": "",
     "license": "ISC",
@@ -20,6 +21,11 @@
         "ramda": "^0.28.0"
     },
     "devDependencies": {
+        "eslint": "^7.32.0",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^5.2.0",
         "supertest": "^6.2.2"
     }
 }
