--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
         "axios": "^0.25.0",
         "better-sqlite3": "^7.5.0",
         "bluebird": "^3.7.2",
+        "body-parser": "^1.19.2",
         "coingecko-api": "^1.0.10",
+        "cors": "^2.8.5",
         "ejs": "^3.1.6",
         "expess": "^0.0.1-security",
         "express": "^4.17.3",
         "express-router": "^0.0.1",
+        "highcharts": "^10.0.0",
         "moment": "^2.29.1",
         "ramda": "^0.28.0",
         "sqlite3": "^4.2.0"
