--- a/.github/workflows/jslinter.yml
+++ b/.github/workflows/jslinter.yml
@@ -10,6 +10,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
-        run: yarn install
+        run: npm install
       - name: Run linting checks
-        run: yarn run check
+        run: npm run check
