--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "author": "Simon Bromfield",
     "license": "ISC",
     "dependencies": {
-        "@databases/sqlite": "^3.0.0",
         "apexcharts": "^3.35.0",
         "axios": "^0.25.0",
-        "better-sqlite3": "^7.5.0",
         "bluebird": "^3.7.2",
         "body-parser": "^1.19.2",
         "coingecko-api": "^1.0.10",
@@ -27,10 +25,10 @@
         "express": "^4.17.3",
         "express-router": "^0.0.1",
         "highcharts": "^10.0.0",
+        "latest-version": "^6.0.0",
         "moment": "^2.29.2",
         "nodemon": "^2.0.15",
-        "ramda": "^0.28.0",
-        "sqlite3": "^4.2.0"
+        "ramda": "^0.28.0"
     },
     "devDependencies": {
         "eslint": "^7.32.0",
